k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auto-inquiry-form
  labels:
    app: auto-inquiry-form
    environment: base
